[package]
name = "message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.11.3"
borsh = { version = "0.9.1", features = ["const-generics"] }

[lib]
crate-type = ["cdylib", "lib"]